--- a/draggables.css
+++ b/draggables.css
@@ -233,3 +233,58 @@
   font-size: 0.5em;
   vertical-align: top;
 }
+
+
+.big-number-children {
+  position: absolute;
+  font-family: "Roboto Slab";
+  user-select: none;
+}
+
+.big-number-backgrounds {
+  width: 100%;
+  height: 100%;
+  background-color: #b5e7c3;
+}
+
+.big-number-backgrounds:hover {
+  cursor: pointer;
+  background-color: #cdf1ce;
+}
+
+.big-number-values {
+  padding-left: 2px;
+  width: calc(100% - 2px);
+  
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  text-align: center;
+  font-size: 20px;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.big-number-copieds {
+  top: 0px;
+  left: 0px;
+  background-color: orange;
+  padding: 0px 2px;
+  font-size: 10px;
+
+  transform: translateY(-100%);
+
+  z-index: 1;
+
+  transition-property: transform;
+  transition-duration: 100ms;
+
+  color: white;
+  background-color: black;
+}
+
+.big-number-copieds.actives {
+  transform: translateY(0);
+}
