--- a/draggables.css
+++ b/draggables.css
@@ -78,7 +78,7 @@
   padding-left: 2px;
 
   user-select: none;
-  text-overflow: ellipsis;
+  /* text-overflow: ellipsis; */
   overflow: hidden;
 
   transition-property: width;
@@ -234,6 +234,37 @@
   vertical-align: top;
 }
 
+.large-element-more-infos {
+  width: 5px;
+  height: 50px;
+  background-color: #d3eced;
+  
+  border: solid black 2px;
+  border-left: none;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+
+  top: calc(50% - 25px);
+
+  transition-property: width;
+  transition-duration :100ms;
+}
+
+.large-element-more-infos:hover {
+  cursor: pointer;
+  width: 20px;
+}
+
+.large-element-more-infos:hover::before {
+  content: "i";
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: blue; /* I hate this color, but it works in small portions */
+}
+
 
 .big-number-children {
   position: absolute;
@@ -290,15 +321,170 @@
 }
 
 
+
+.isotope-display-children {
+  position: absolute;
+  font-family: "Roboto Slab";
+  user-select: none;
+}
+
 .isotope-display-graphs {
   width: 100px;
   height: 100px;
   background-color: cornsilk;
+  display: flex;
+  margin-bottom: 0px;
+
+  /* left: 10px; */
+
+  border-right: solid 2px black;
+  /* border-bottom: solid 2px; */
+  /* border-left: solid 2px; */
+
+  overflow: hidden;
 }
 
 .isotope-display-graph-bars {
-  width: 5px;
-  background-color: black;
+  height: 100%;
   display: inline-block;
+  flex: 1 1 0px;
+}
+
+.isotope-display-graph-bars:nth-child(even) {
+  background-color: #88a3db;
+}
+
+.isotope-display-graph-bars:nth-child(odd) {
+  background-color: #bdd2ff;
+}
+
+.isotope-display-graph-bars:hover {
+  cursor: pointer;
+  background-color: #85abf7;
+
+  flex-grow: 2;
+}
+
+.isotope-display-graph-bars.actives .isotope-display-graph-bar-graphics {
+  cursor: pointer;
+  background-color: yellow;
+}
+
+.isotope-display-graph-bar-graphics {
+  background-color: black;
+  width: 50%;
+  max-width: 10px;
+
+  margin: auto;
+  position: relative;
+}
+
+.isotope-display-graph-bar-graphics.unavailables {
+  /* background-color: grey; */
+  background-image: url(missing.png);
+  background-color: #b3b3b3;
+}
+
+.isotope-display-graph-bar-dividers {
+  position: relative;
+
+  width: 100%;
+  border-top: solid 2px black;
+}
+
+.isotope-display-graph-bar-numbers {
+  position: relative;
+  
+  width: 100%;
+  height: 0px;
+
+  left: calc(50% - 2px);
+}
+
+.isotope-display-graph-bar-numbers-value {
+  font-size: 9px;
+  width: 0px;
+
+  transform: translateY(-2px) rotate(45deg);
+}
+
+.isotope-display-graph-bars.actives .isotope-display-graph-bar-numbers-value {
+  color: yellow !important;
+}
+
+.isotope-display-headers,
+.isotope-display-values {
+  left: 100px;
+  width: 100px;
+  
+  text-align: center;
+}
+
+.isotope-display-headers {
+  font-size: 10px;
+  border-bottom: dashed black 1px;
+}
+
+.isotope-display-headers:not(:first-child) {
+  border-top: solid black 1px;
+}
+
+.isotope-display-values {
+  font-size: 12px;
+}
+
+.isotope-display-values:hover {
+  cursor: pointer;
+  background-color: #c7c7c7;
+}
+
+
+.electron-configuration-term-holders {
+  display: flex;
+  flex-direction: row;
+}
+
+.electron-configuration-terms {
   margin-right: 5px;
+}
+
+.electron-configuration-subshells {
+  display: inline-block;
+  font-size: 15px;
+}
+
+.electron-configuration-indicies {
+  display: inline-block;
+  font-size: 10px;
+  vertical-align: top;
+}
+
+
+.raw-data-children {
+  position: absolute;
+  position: absolute;
+  font-family: "Roboto Slab";
+}
+
+.raw-data-data {
+  width: calc(100% - 10px);
+  height: calc(100% - 10px);
+  padding: 5px;
+  /* margin-left: 5px;
+  margin-top: 5px; */
+  overflow: auto;
+
+  font-size: 10px;
+
+  white-space: pre;
+  user-select: text;
+
+  background-color: #212e3a;
+  background-color: #dcdcaa;
+
+  font-family: "Source Code Pro";
+}
+
+.raw-data-data:hover {
+  cursor: text;
 }
